--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>io.github.x-englishwordnet</groupId>
+	<groupId>io.github.oewntk</groupId>
 	<artifactId>fromxml</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>from_xml</name>
 	<description>Parse WordNet XML file into model.</description>
-	<url>https://github.com/x-englishwordnet/fromxml</url>
+	<url>https://github.com/oewntk/fromxml</url>
 
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
@@ -23,12 +23,12 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>io.github.x-englishwordnet</groupId>
+			<groupId>io.github.oewntk</groupId>
 			<artifactId>model</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>io.github.x-englishwordnet</groupId>
+			<groupId>io.github.oewntk</groupId>
 			<artifactId>model</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 			<type>test-jar</type>
@@ -163,7 +163,7 @@
 				<extensions>true</extensions>
 				<configuration>
 					<serverId>ossrh</serverId>
-					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
 					<autoReleaseAfterClose>true</autoReleaseAfterClose>
 				</configuration>
 			</plugin>
@@ -195,24 +195,24 @@
 		<repository>
 			<id>ossrh</id>
 			<name>Maven Central Staging Repository</name>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2</url>
 		</repository>
 		<snapshotRepository>
 			<id>ossrh</id>
 			<name>Maven Central Snapshot Repository</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
 	<scm>
-		<url>https://github.com/x-englishwordnet/fromxml</url>
-		<connection>scm:git:git://github.com/x-englishwordnet/fromxml.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com:x-englishwordnet/fromxml.git</developerConnection>
+		<url>https://github.com/oewntk/fromxml</url>
+		<connection>scm:git:git://github.com/oewntk/fromxml.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:oewntk/fromxml.git</developerConnection>
 	</scm>
 
 	<issueManagement>
 		<system>GitHub</system>
-		<url>https://github.com/x-englishwordnet/fromxml/issues</url>
+		<url>https://github.com/oewntk/fromxml/issues</url>
 	</issueManagement>
 
 	<licenses>
@@ -224,8 +224,8 @@
 	</licenses>
 
 	<organization>
-		<name>com.github.x-englishwordnet</name>
-		<url>https://github.com/x-englishwordnet</url>
+		<name>com.github.oewntk</name>
+		<url>https://github.com/oewntk</url>
 	</organization>
 
 	<developers>
